--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Prepare
         run: |
-          pacman -Syu --noconfirm --needed gmp mpfr arm-none-eabi-newlib arm-none-eabi-binutils zlib libmpc
+          pacman -Syu --noconfirm --needed binutils libmpc gcc-ada doxygen lib32-glibc lib32-gcc-libs python git libxcrypt gdc
           useradd -m build
           chown -R build .
       - name: Make package
